--- a/latihan.ipynb
+++ b/latihan.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZtotWpDIO94OcdnquZ0bj",
+      "authorship_tag": "ABX9TyOEXDzMJMiomzqXuPCHoxOL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,9 +65,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YrkArevrfYVc",
-        "outputId": "848e3a1d-df32-4eb0-86c9-1788ed775ce0"
+        "outputId": "ff728775-6a1a-4b27-d1af-6506c774f2d5"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,7 +77,35 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]\n",
+        "a[1 : 15: 12]\n",
+        "a[0 : 20 : 19]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HrCQunChgl18",
+        "outputId": "13603895-5bce-4e56-dec2-807359a3b1e5"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 20]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     }
