--- a/class.ipynb
+++ b/class.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPC0GI/noH58FxQ2DSKsNkL",
+      "authorship_tag": "ABX9TyNEqDHwcgKl6eIOD821wgjG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IrBNFwjJqAKq",
-        "outputId": "b6f11195-457a-4aed-ce22-e3704a9e25a0"
+        "outputId": "575f3ddc-e14f-46ca-ffb1-3d4405ef86dc"
       },
       "outputs": [
         {
@@ -46,11 +46,11 @@
             "whats your addres\n",
             "Nonenyc\n",
             "whats your phonenumber\n",
-            "None1101010\n",
-            "welcome to our school\n",
+            "None911\n",
+            "welcome t so our school\n",
             "name =  alfatih\n",
             "addres =  nyc\n",
-            "phone number =  1101010\n"
+            "phone number =  911\n"
           ]
         }
       ],
@@ -72,6 +72,50 @@
         "phonenumber = str(input(print('whats your phonenumber')))\n",
         "a = student(name,addres,phonenumber)\n",
         "a.welcome()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class student:\n",
+        "  def __init__(self,nama,nomor,tempat_tinggal):\n",
+        "    self.nama = nama\n",
+        "    self.nomor = nomor\n",
+        "    self.tempat_tinggal = tempat_tinggal\n",
+        "  def selamat_datang(self):\n",
+        "    print('nama =' , self.nama)\n",
+        "    print('nomor =', self.nomor)\n",
+        "    print('tempat tinggal = ', self.tempat_tinggal)\n",
+        "nama = str(input(print('nama siswa')))\n",
+        "nomor = str(input(print('nomor siswa')))\n",
+        "tempat_tinggal = str(input(print('tempat tinggal')))\n",
+        "a = student(nama,nomor,tempat_tinggal)\n",
+        "a.selamat_datang()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ndy27_WcKkAv",
+        "outputId": "5468ec72-a5bd-47a5-8b8f-838e6728416d"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "nama siswa\n",
+            "None1\n",
+            "nomor siswa\n",
+            "None2\n",
+            "tempat tinggal\n",
+            "None3\n",
+            "nama = 1\n",
+            "nomor = 2\n",
+            "tempat tinggal =  3\n"
+          ]
+        }
       ]
     }
   ]
