--- a/class_&_object.ipynb
+++ b/class_&_object.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOY6xgig95XFn1fqwpDlYZz",
+      "authorship_tag": "ABX9TyPCP3VWkyPD2xJeJlC44/+/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 201
         },
         "id": "idy2nfU4RcxR",
-        "outputId": "0e7faa61-11e2-4b94-b645-7cbc4b91f37f"
+        "outputId": "a2853ae6-7cef-4811-9817-b39b471c2dab"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "first person is playing gameplay\n"
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-2a1b89455dd6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mobject1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'valorant'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'initiator'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'PC'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'a'"
           ]
         }
       ],
@@ -52,16 +57,14 @@
         "    self.role = role\n",
         "    self.device = device\n",
         "  def a(self):\n",
-        "    b = str(self.name) + ('is a game')\n",
+        "    b = str((self.name) + ('is a game'))\n",
         "    return(b)\n",
         "  def c(self):\n",
-        "    d = str(self.name) + ('can be play together')\n",
+        "    d = str((self.name) + ('can be play together'))\n",
         "    return(d)\n",
-        "class gameplay(game):\n",
-        "  pass\n",
-        "object1 = gameplay('valorant','initiator','PC')\n",
-        "f = object1.__class__.__name__\n",
-        "print('first person is playing', f)"
+        "\n",
+        "object1 = ('valorant','initiator','PC')\n",
+        "print(object1.a())\n"
       ]
     },
     {
